# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"



[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks", "test"]

[project]
name = "pyphetools"
version = "0.2.12"
requires-python = ">=3.5"
description = "Generate and work with GA4GH phenopackets"
readme = "README.md"
authors = [
    {name = "Peter Robinson", email="peter.robinson@jax.org"},
     ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "HPO"]
dependencies = [
    "hpo-toolkit",
    "openpyxl",
    "pandas",
    "phenopackets",
    "requests"
]




#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
homepage = "https://github.com/monarch-initiative/pyphetools"
repository = "https://github.com/monarch-initiative/pyphetools.git"
documentation = "https://github.com/monarch-initiative/pyphetools"
bugtracker = "https://github.com/monarch-initiative/pyphetools/issues"

#[project.scripts]
# ... = "reader.__main__:main"