# pyproject.toml

[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = [".","src"]
exclude = ["notebooks", "test"]

[project]
name = "pyphetools"
# version in __init__
requires-python = ">=3.8"
description = "Generate and work with GA4GH phenopackets"
readme = "README.md"
authors = [
    {name = "Peter Robinson", email="peter.robinson@jax.org"},
     ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "HPO"]
dependencies = [
    "hpo-toolkit>=0.3.0",
    "openpyxl",
    "pandas",
    "phenopackets",
    "protobuf",
    "requests"
]
dynamic = ["version"]
[project.optional-dependencies]
test = ["pytest"]


[project.urls]
homepage = "https://github.com/monarch-initiative/pyphetools"
repository = "https://github.com/monarch-initiative/pyphetools.git"
documentation = "https://github.com/monarch-initiative/pyphetools"
bugtracker = "https://github.com/monarch-initiative/pyphetools/issues"




[tool.setuptools]
package-dir = { "" = "." }
zip-safe = false
[tool.setuptools.dynamic]
version = { attr = "pyphetools.__version__" }

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
